--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
 <html>
-    <head>
-    </head>
-    <body>
-    </body>
-  </html>
+  <head>
+    <title>Page Title</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <p>Hello, world!</p>
+  </body>
+</html>
