--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
     </p>
 
     <h2>Founders</h2>
-    .
-    .
-    .
     <h3>Michael Hartl</h3>
 
     <p>
@@ -34,7 +31,7 @@
       plan for world domination. Rumors that he's secretly a supervillain
       are slightly exaggerated.
     </p>
-
+    <p> You should follow Michael on Twitter <a href="http://twitter.com/mhartl">here</a>. </p>
     <h3>Lee Donahoe</h3>
 
     <p>
