--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       interfaces, doing front-end development, or writing some of the
       interface-related Learn Enough tutorials.
     </p>
-
+    <p> You should follow Lee on Twitter <a href="https://twitter.com/leedonahoe">here</a>. </p>
     <h3>Nick Merwin</h3>
 
     <p>
