--- a/index.html
+++ b/index.html
@@ -49,5 +49,9 @@
       at heart. He's just as happy shredding well-spec'd lines of code from a
       tour bus as he is from his kitchen table.
     </p>
+    <p>
+        You should follow Nick on Twitter
+        <a href="https://twitter.com/nickmerwin">here</a>.
+      </p>
   </body>
 </html>
