--- a/index.html
+++ b/index.html
@@ -18,7 +18,46 @@
       learning technical sophistication, probably more. To join our
       movement, sign up for our official email list now.
     </p>
-
+    <h1>The Learn Enough Story</h1>
+    <p> Learn Enough to Be Dangerous is a leader in the movement to teach
+    <em>technical sophistication</em>, the seemingly magical ability to take
+    command of your computer and get it to do your bidding. This includes
+    everything from command lines and coding to guessing keyboard shortcuts,
+    Googling error messages, and knowing when to just reboot the darn thing.
+    We believe there are <strong>at least a billion people</strong> who can benefit from
+    learning technical sophistication, probably more. To join our
+    movement, <a href="http://learnenough.com/email"> sign up for our official email list now.</a> </p>
+    <p> HTML was created by the original "web developer", computer scientist
+    <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim Berners-Lee</a>. It's not true that 
+    Sir Tim invented HTML in order to share pictures of his cat, but it would be cool if it were.</p>
+    <img src="images/IMG_4820.jpg" alt="My Baby"> 
+    <p>
+    In addition to hosting most of the world's supply of kitten videos, the
+    Web is also full of inspiring quotes, perhaps none more so than this one:
+    </p>
+    <p>Quote</p>
+    <blockquote style="padding: 2px 20px; background-color:gray;">
+    <p>
+    <em>Don't believe every quote you read on the Internet.</em>
+    <br>
+    —Abraham Lincoln
+    </p>
+    </blockquote>
+    
+    <h2>Background</h2>
+    <p>
+    Learn Enough to Be Dangerous is an outgrowth of the
+    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> and the
+    <a href="http://www.softcover.io/">Softcover publishing platform</a>.
+    This page is part of the sample site for
+    <a href="http://learnenough.com/html-tutorial"><em>Learn Enough HTML to
+    Be Dangerous</em></a>, which teaches the basics of
+    <strong>H</strong>yper<strong>T</strong>ext <strong>M</strong>arkup
+    <strong>L</strong>anguage, the universal language of the World Wide Web.
+    Other related tutorials can be found at
+    <a href="http://learnenough.com/">learnenough.com</a>
+    </p>
+    
     <h2>Founders</h2>
     <h3>Michael Hartl</h3>
 
