--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p> HTML was created by the original "web developer", computer scientist
     <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim Berners-Lee</a>. It's not true that 
     Sir Tim invented HTML in order to share pictures of his cat, but it would be cool if it were.</p>
-    <img src="images/IMG_4820.JPG" alt="My Baby"> 
+    <img src="image/IMG_4820.JPG" alt="My Baby"> 
     <p>
     In addition to hosting most of the world's supply of kitten videos, the
     Web is also full of inspiring quotes, perhaps none more so than this one:
